Change build script to run an infinite loop

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "build": "echo '--- ENV START ---' && printenv && echo '--- ENV END ---'"
+    "build": "node -e 'while(true){}'"
   }
 }
